# Merca-inventario

./: .gitignore  README.md  pyproject.toml
src/: main.py
